@@ -10,6 +10,7 @@ CHANGELOG
 * Warn on tiling landscape/portrait spatial extent only if map with local projection
 * Safety check on thumbnailing if images are missing from disk (*useful for troubleshooting,
   when importing existing dumps*).
+* Fix overlapping filter if no records present (fixes #931)
 
 
 0.21.1 (2013-12-11)
